--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -8,99 +8,63 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
 
     steps:
-      # Step 0: Check Disk Space
-      - name: Check Disk Space
-        run: |
-          echo "Initial disk space:"
-          df -h
-
-      # Step 1: Checkout Repository
       - name: Checkout Repository
         uses: actions/checkout@v4
 
-      # Step 2: Set up Python
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
 
-      # Step 3: Cache Python Dependencies
-      - name: Cache Python Dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      # Step 4: Install System Dependencies
       - name: Install System Dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential libstdc++6 python3-pip git zip wget unzip openjdk-17-jdk
-          sudo apt-get install -y libncurses5 libffi-dev libssl-dev libbz2-dev liblzma-dev zlib1g-dev
 
-          # Additional headers/libraries often required for Kivy/Buildozer
-          sudo apt-get install -y libgles2-mesa-dev libgl1-mesa-dev libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev
-
-          # Clean up unused packages to free disk space
-          sudo apt-get autoremove -y
-          sudo apt-get clean
-
-          # Check disk space after installing dependencies
-          echo "Disk space after installing system dependencies:"
-          df -h
-
-      # Step 5: Install Python Dependencies
       - name: Install Python Dependencies
         run: |
           pip install --upgrade pip setuptools wheel
-          pip install cython==3.0.2 || { echo "Cython installation failed"; exit 1; }
-          pip install buildozer==1.5.0 python-for-android kivy kivymd requests || { echo "Python dependency installation failed"; exit 1; }
+          pip install kivy kivymd buildozer cython
 
-          # Clear pip cache to save disk space
-          rm -rf ~/.cache/pip
-
-          # Check disk space after installing Python dependencies
-          echo "Disk space after installing Python dependencies:"
-          df -h
-
-      # Step 6: Set up Android SDK and NDK
-      - name: Set up Android SDK and NDK
+      - name: Set up Android SDK
         run: |
           mkdir -p $HOME/android-sdk/cmdline-tools
-          cd $HOME/android-sdk/cmdline-tools
+          cd $HOME/android-sdk
           wget https://dl.google.com/android/repository/commandlinetools-linux-11076708_latest.zip
-          unzip commandlinetools-linux-*.zip
-          mv cmdline-tools latest
+          unzip commandlinetools-linux-*.zip -d cmdline-tools
+          mv cmdline-tools/cmdline-tools cmdline-tools/latest
           echo "ANDROID_SDK_ROOT=$HOME/android-sdk" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME=$HOME/android-sdk/ndk/25.1.8937393" >> $GITHUB_ENV
           echo "PATH=$HOME/android-sdk/cmdline-tools/latest/bin:$PATH" >> $GITHUB_ENV
 
-          # Verify sdkmanager exists
-          ls -l $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager || { echo "sdkmanager not found"; exit 1; }
+      - name: Install Android NDK
+        run: |
+          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --install "ndk;25.1.8937393" --sdk_root=$ANDROID_SDK_ROOT
 
-          # Install required components
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --install "ndk;25.2.9519653" "platform-tools" "build-tools;34.0.0" "platforms;android-31" || { echo "SDK/NDK installation failed"; exit 1; }
+      - name: Verify NDK Installation
+        run: |
+          ls -l $ANDROID_SDK_ROOT/ndk
 
-          # Accept licenses (if not already accepted)
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses > /dev/null 2>&1 || true
+      - name: Accept Android Licenses
+        run: |
+          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --licenses || true
 
-          # Clean up downloaded SDK tools to save disk space
-          rm -rf $HOME/android-sdk/cmdline-tools/commandlinetools-linux-*.zip
+      - name: Install Android SDK Components
+        run: |
+          $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34" "cmdline-tools;latest" "extras;android;m2repository"
 
-          # Check disk space after setting up Android SDK/NDK
-          echo "Disk space after setting up Android SDK/NDK:"
-          df -h
+      - name: Verify AIDL Installation
+        run: |
+          export PATH=$ANDROID_SDK_ROOT/build-tools/34.0.0:$PATH
+          which aidl || { echo "AIDL not found"; exit 1; }
 
-      # Step 7: Initialize Buildozer
       - name: Initialize Buildozer
         run: |
-          buildozer init || { echo "Buildozer initialization failed"; exit 1; }
+          buildozer init
 
-      # Step 8: Configure Buildozer Spec
       - name: Configure Buildozer Spec
         run: |
           echo "[app]" > buildozer.spec
@@ -108,50 +72,27 @@ jobs:
           echo "package.name = pokedex" >> buildozer.spec
           echo "package.domain = org.example" >> buildozer.spec
           echo "source.dir = ." >> buildozer.spec
-          echo "version = ${{ github.ref_name }}" >> buildozer.spec
+          echo "version = 1.0.0" >> buildozer.spec
           echo "requirements = kivy, kivymd, requests" >> buildozer.spec
           echo "source.include_exts = py,png,jpg,kv,atlas" >> buildozer.spec
           echo "android.accept_sdk_license = True" >> buildozer.spec
           echo "android.skip_update = False" >> buildozer.spec
-          echo "android.ndk_version = 25b" >> buildozer.spec
-          echo "android.api = 31" >> buildozer.spec
-          echo "android.minapi = 21" >> buildozer.spec
-          echo "android.archs = armeabi-v7a" >> buildozer.spec
+          echo "android.sdk = 34" >> buildozer.spec
+          echo "android.ndk = 25.1.8937393" >> buildozer.spec
+          echo "android.arch = armeabi-v7a" >> buildozer.spec
           echo "android.permissions = INTERNET" >> buildozer.spec
 
-      # Step 9: Clean Buildozer Cache
-      - name: Clean Buildozer Cache
+      - name: Verify Buildozer Spec
         run: |
-          echo y | buildozer distclean || { echo "Buildozer distclean failed"; exit 1; }
+          cat buildozer.spec
 
-          # Remove unnecessary intermediate files
-          rm -rf ~/.local/share/python-for-android
-          rm -rf ./.buildozer/android/platform/build-armeabi-v7a
-
-          # Check disk space after cleaning Buildozer cache
-          echo "Disk space after cleaning Buildozer cache:"
-          df -h
-
-      # Step 10: Build APK
       - name: Build APK
         run: |
           export PATH=$ANDROID_SDK_ROOT/build-tools/34.0.0:$PATH
-          buildozer -v android debug --log_level=2 || { echo "APK build failed"; exit 1; }
+          buildozer -v android debug
 
-      # Step 11: Verify APK Exists
-      - name: Verify APK Exists
-        run: |
-          ls bin/*.apk || { echo "APK not found"; exit 1; }
-
-      # Step 12: Upload APK Artifact
       - name: Upload APK Artifact
         uses: actions/upload-artifact@v4
         with:
           name: Pokedex-APK
           path: bin/*.apk
-
-      # Step 13: Final Disk Space Check
-      - name: Final Disk Space Check
-        run: |
-          echo "Final disk space after completing the workflow:"
-          df -h
